More visible title for Issues, MR etc

--- a/app/assets/stylesheets/gitlab_bootstrap/blocks.scss
+++ b/app/assets/stylesheets/gitlab_bootstrap/blocks.scss
@@ -72,10 +72,11 @@
 
   .ui-box-head {
     .box-title {
-      font-size: 18px;
-      font-weight: normal;
+      font-size: 20px;
+      font-weight: 500;
       line-height: 28px;
       margin: 0;
+      color: #444;
     }
     h3 {
       margin: 0;
